# ci_example

./: .codecov.yml  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  azure-pipelines.yml  codecov.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  test.md
.github/workflows/: codecov.yml  ubuntu.yml  windows.yml
scripts/: build_debug.sh  build_release.sh  run_coverage.sh
scripts/ci/: configure_lcov.sh
scripts/utils/: configure_debug.sh  configure_release.sh  install_cmake_ubuntu1804.sh  install_cmake_ubuntu2004.sh
src/: CMakeLists.txt
src/ci_example/: CMakeLists.txt  example_func.h
test/: CMakeLists.txt
test/ci_example/: CMakeLists.txt  example_func.cpp  main.cpp
